--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -523,6 +523,54 @@ strong
     &:nth-child(6n)
       margin-right: 0px
 
+.map-columns
+  margin-bottom: 0px
+
+  .map-column
+    float: left
+    width: 220px
+    margin-right: 20px
+
+    &:nth-child(4n)
+      margin-right: 0px
+
+    &.schools
+      li.first
+        background: #4990E2
+
+    &.dosug
+      li.first
+        background: #AC4D86
+
+    &.sport
+      li.first
+        background: #7ED320
+
+    &.health
+      li.first
+        background: #F54438
+
+
+
+    li
+      padding: 3px 0px
+      cursor: pointer
+      text-decoration: underline
+      color: #4990E2
+
+      &.first
+        display: block
+        height: 30px
+        line-height: 30px
+        margin-bottom: 15px
+        color: #fff
+        text-decoration: none
+        padding-left: 15px
+        font-family: 'HelveticaNeue-Regular'
+        background: #4990E2
+
+
+
 #map2
   width: 100%
   height: 600px
