--- a/views/index.haml
+++ b/views/index.haml
@@ -16,10 +16,12 @@
           %a{href: '#', rel: 'company'} О компании
 
       .phone
-        7 (918) 035 71 91
+        (918) 035 71 91
         .small
           Ежедневно с 9:00 до 21:00
 
+
+    .stickers
 
     .title
       Жилой комплекс «Мир»
@@ -293,7 +295,7 @@
       .label
         Телефон отдела продаж
       .phone
-        (918) 272-77-77
+        (918) 035 71 91
 
     .block
       .label
