--- a/assets/stylesheets/intro.sass
+++ b/assets/stylesheets/intro.sass
@@ -8,6 +8,20 @@
   color: #fff
 
 
+
+  .stickers
+    //position: absolute
+    //top: 100px
+    //right: 100px
+
+    margin: 0px auto
+    margin-top: 25px
+    width: 518px
+    height: 60px
+
+    background: url('/images/stickers2.png') no-repeat
+    background-size: 100%
+
   .topbar
     height: 100px
     
@@ -60,17 +74,18 @@
     line-height: 1.3
     font-family: 'HelveticaNeue-Light'
     text-align: center
-    margin-top: 135px
 
     strong
       font-family: 'HelveticaNeue-Light'
 
+    @media screen and (min-width: 800px)
+      margin-top: 50px
 
     @media screen and (min-width: 1600px)
-      margin-top: 150px
+      margin-top: 75px
 
     @media screen and (min-width: 1920px)
-      margin-top: 250px
+      margin-top: 150px
 
 
   .take-call-button
@@ -86,11 +101,20 @@
     color: #fff
     background: #4990E2   
 
+    font-family: 'HelveticaNeue-Thin'
+
+    //border: 1px solid #7ED320
+
+    cursor: pointer
+
     @media screen and (min-width: 1600px)
       margin-top: 50px
 
     @media screen and (min-width: 1920px)
       margin-top: 100px
+
+    //&:hover
+      background: #4990E2
 
 
 
