--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -105,9 +105,11 @@ strong
     width: 300px
 
     .name
-      font-size: 24px
+      font-size: 32px
+      font-family: "HelveticaNeue-Thin"
       color: #372D2D
       margin-bottom: 50px
+
 
     .text
       font-size: 15px
@@ -565,7 +567,7 @@ strong
         margin-bottom: 15px
         color: #fff
         text-decoration: none
-        padding-left: 15px
+        text-align: center
         font-family: 'HelveticaNeue-Regular'
         background: #4990E2
 
