--- a/assets/stylesheets/intro.sass
+++ b/assets/stylesheets/intro.sass
@@ -24,6 +24,7 @@
 
   .topbar
     height: 100px
+    margin-bottom: 100px
     
 
     .navigation
@@ -45,7 +46,7 @@
     .phone
       float: right
       font-family: 'HelveticaNeue-Medium'
-      font-size: 24px
+      font-size: 32px
       padding-top: 30px
       text-align: left
 
