--- a/views/index.haml
+++ b/views/index.haml
@@ -16,12 +16,9 @@
           %a{href: '#', rel: 'company'} О компании
 
       .phone
-        (918) 035 71 91
+        +7 (918) 035 71 91
         .small
           Ежедневно с 9:00 до 21:00
-
-
-    .stickers
 
     .title
       Жилой комплекс «Мир»
@@ -231,16 +228,11 @@
         .document
           .icon
           %a{href: '#'}
-            Документы
+            Презентация 
+            %br
+            о компании
             %br
             ООО «Остринский»
-
-        .document
-          .icon
-          %a{href: '#'}
-            Документы
-            %br
-            ООО «Альянс ХХI век»
 
 .form-block.blue
   .wrapper
@@ -259,30 +251,11 @@
       Документы
 
     .documents.clearfix
-      .document.clearfix
-        .icon
-        %a{href: '#'}
-          Разрешение на строительство
 
       .document.clearfix
         .icon
         %a{href: '#'}
           Свидетельство на землю
-
-      .document.clearfix
-        .icon
-        %a{href: '#'}
-          Проектная декларация
-
-      .document.clearfix
-        .icon
-        %a{href: '#'}
-          Кадастровый паспорт
-
-      .document.clearfix
-        .icon
-        %a{href: '#'}
-          Генеральный план
 
 #map-wrapper
   #map
@@ -295,7 +268,7 @@
       .label
         Телефон отдела продаж
       .phone
-        (918) 035 71 91
+        +7 (918) 035 71 91
 
     .block
       .label
