--- a/views/plans/plan2010.haml
+++ b/views/plans/plan2010.haml
@@ -48,4 +48,4 @@
       * Площадь балкона рассчитана с
       коэффицентом 0.3
 
-    .button#rent-button Забронировать
+    .button.rent-button Забронировать
