--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -437,9 +437,10 @@ strong
     .icon
       float: left
       margin-right: 20px
-      width: 60px
-      height: 60px
-      background: #ccc
+      width: 66px
+      height: 81px
+      background: url('/images/pdf-red.png') no-repeat
+      background-size: 100%
       margin-bottom: 10px
 
     a
