--- a/assets/stylesheets/index.sass
+++ b/assets/stylesheets/index.sass
@@ -533,6 +533,7 @@ strong
     float: left
     width: 220px
     margin-right: 20px
+    font-size: 12px
 
     &:nth-child(4n)
       margin-right: 0px
@@ -571,6 +572,7 @@ strong
         text-align: center
         font-family: 'HelveticaNeue-Regular'
         background: #4990E2
+        font-size: 15px
 
 
 
