new files version added

--- a/views/index.haml
+++ b/views/index.haml
@@ -256,6 +256,11 @@
         %a{href: '/public/ekspertiza.pdf', target: '_blank'}
           Экспертиза
 
+      .document.clearfix
+        .icon
+        %a{href: '/public/declaraciya.pdf', target: '_blank'}
+          Проектная декларация
+
 #map-wrapper
   #map
   #some-block
